<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="serviceProvider"
        android:title="@string/serviceProviderTitle"
        android:dialogTitle="@string/serviceProviderDialogTitle"
        android:entries="@array/serviceProviderEntries"
        android:entryValues="@array/serviceProviderValues" />

    <EditTextPreference
        android:key="wuServiceKey"
        android:singleLine="true"
        android:summary="@string/wuServiceKeySummary"
        android:title="@string/wuServiceKeyTitle" />
    
    <EditTextPreference
        android:key="wwoServiceKey"
        android:singleLine="true"
        android:summary="@string/wwoServiceKeySummary"
        android:title="@string/wwoServiceKeyTitle" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showLocationCoordinates"
        android:summary="@string/showLocationCoordinatesSummary"
        android:title="@string/showLocationCoordinatesLabel" />

    <ListPreference
        android:key="unitsOfMeasure"
        android:title="@string/unitsOfMeasureTitle"
        android:dialogTitle="@string/unitsOfMeasureDialogTitle"
        android:entries="@array/unitsOfMeasureEntries"
        android:entryValues="@array/unitsOfMeasureValues" />

</PreferenceScreen>