<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/forecastDay"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/forecastDay"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/forecastConditionImage"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/forecastCondition"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/forecastCondition"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/forecastTempLowF"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastTempLow"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/forecastTempLowC"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastTempLow"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/forecastTempHighF"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastTempHigh"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/forecastTempHighC"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastTempHigh"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/forecastWindDir"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastWindDir"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/forecastWindSpeedMph"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastWindSpeed"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/forecastWindSpeedKph"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastWindSpeed"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/forecastPrecipitation"
        style="@style/WeatherTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="right"
        android:text="@string/forecastPrecipitation"
        android:layout_weight="2" />

</LinearLayout>